--- a/GarphIt.web/GraphIt.web.csproj
+++ b/GarphIt.web/GraphIt.web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorPro.BlazorSize" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
     <PackageReference Include="Syncfusion.Blazor" Version="18.3.0.38" />
   </ItemGroup>
