--- a/GarphIt.web/GraphIt.web.csproj
+++ b/GarphIt.web/GraphIt.web.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\AlgoEdgeLineBase.cs" />
+    <Compile Remove="Pages\AlgoNodeCircleBase.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Aspose.SVG" Version="20.11.0" />
     <PackageReference Include="BlazorPro.BlazorSize" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
