--- a/GraphIt.wasm/wwwroot/manifest.json
+++ b/GraphIt.wasm/wwwroot/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "GraphIt.wasm",
-  "short_name": "GraphIt.wasm",
+  "name": "Graphanatic",
+  "short_name": "Graphanatic",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#03173d",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "icon-512.png",
